@@ -11,6 +11,10 @@ GNU grep NEWS                                    -*- outline -*-
   release 2.5.3 (2007), now warn that they are obsolescent and should
   be replaced by grep -E and grep -F.
 
+  The confusing GREP_COLOR environment variable is now obsolescent.
+  Instead of GREP_COLOR='xxx', use GREP_COLORS='mt=xxx'.  grep now
+  warns if GREP_COLOR is used and is not overridden by GREP_COLORS.
+
   Regular expressions with stray backslashes now cause warnings, as
   their unspecified behavior can lead to unexpected results.
   For example, '\a' and 'a' are not always equivalent
